--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,16 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu--latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup--python@v4
+      uses: actions/setup-python@v4
       with:
         python-version: 3.11
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install -upgrade pip
         pip install -r requirements.txt
     - name: Run tests
       run: |
